# ml-pipeline-tutorial

./: README.md  setup.cfg
tutorial_ml/configs/: imports
tutorial_ml/configs/base/: train_dnn.gin
tutorial_ml/configs/datasets/: gtzan_genre.gin
tutorial_ml/configs/features/: encodecmaemel256_classification.gin  wav_classification.gin
tutorial_ml/configs/models/: cnn.gin  encodecmae_mlp.gin
tutorial_ml/lists/: gtzan_repeated_corrupted_sturm.list
tutorial_ml/scripts/: run.sh
tutorial_ml/tasks/: __init__.py  tasks.py
tutorial_ml/tasks/models/: __init__.py  blocks.py  cnn.py  upstreams.py  wrappers.py
