[metadata]
name = tutorial_ml
version = 0.0.1
author = Leonardo Pepino
author_email = lpepino@dc.uba.ar
description = Tutorial ML Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = tutorial_ml
python_requires = >=3.6
install_requires = 
    ginpipe
    soundfile
    pandas
